--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -1,24 +1,22 @@
-.home--container{
+.home--container {
     background: var(--blau);
     color: white;
     height: 100%;
     width: 100vw;
     padding: 0 50px 100px;
     margin-bottom: 100px;
-    
-}
-
-.home--container--top{
+  }
+  
+  .home--container--top {
     position: relative;
     display: flex;
     padding: 50px;
     justify-content: space-evenly;
     gap: 10px;
     align-items: center;
- 
-}
-
-.home--container--top > img{   
+  }
+  
+  .home--container--top > img {
     border-radius: 2px;
     max-width: 32em;
     width: 100%;
@@ -26,82 +24,69 @@
     object-fit: cover;
     border: 2px solid var(--blau2);
     box-shadow: 0px 0px 20px 0px rgba(11, 4, 104, 0.9);
-    -webkit-box-shadow:0px 0px 20px 0px rgba(11, 4, 104, 0.9);
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(11, 4, 104, 0.9);
     -moz-box-shadow: 0px 0px 20px 0px rgba(11, 4, 104, 0.9);
-     transition: 1s ease;
-}
-.home--container--top > img:hover{
--webkit-transform: rotateZ(7deg);
--ms-transform: rotateZ(7deg);
-transform: rotateZ(7deg);
-transition: 1s ease; 
-}
-
-.home--container--top--left {
+    transition: 1s ease;
+  }
+  .home--container--top > img:hover {
+    -webkit-transform: rotateZ(7deg);
+    -ms-transform: rotateZ(7deg);
+    transform: rotateZ(7deg);
+    transition: 1s ease;
+  }
+  
+  .home--container--top--left {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-}
-
-.p {
+  }
   
+  .p {
     display: flex;
     grid-area: 1 / 2 / 2 / 3;
     font-size: 2em;
-    letter-spacing: .2em;
+    letter-spacing: 0.2em;
     font-weight: 600;
-    align-self:last baseline;
+    align-self: last baseline;
     justify-self: end;
-    
-}
-
-.p > img {
+  }
+  
+  .p > img {
     width: 37px;
     height: 37px;
     margin: 24px 10px 0px 0px;
-
-}
-.home--container--top--left > h1{
-    grid-area: 2 / 1 / 3 / 3; 
+  }
+  .home--container--top--left > h1 {
+    grid-area: 2 / 1 / 3 / 3;
     line-height: 2em;
     font-weight: 600;
     text-align: left;
     animation: 3s fade-in ease-in-out 1;
-}
-
-.willkommen--span {   
-    font-size: 2.5rem;
-    font-weight: 600;  
-    background: linear-gradient(to right, #CFE7fA 0%, #6393C1 100%);
-    -webkit-background-clip: text;
-            background-clip: text;
-    -webkit-text-fill-color: transparent;
+  }
   
-   
-    
-}
-.name--span {
+  .willkommen--span {
+    font-size: 2.5rem;
+    font-weight: 600;
+    background: linear-gradient(to right, #cfe7fa 0%, #6393c1 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .name--span {
     font-size: 3.5rem;
-    text-shadow: 0 1px 0 #ccc, 
-    0 2px 0 #c9c9c9,
-    0 3px 0 #bbb,
-    0 4px 0 #b9b9b9,
-    0 6px 1px rgba(0,0,0,.1),
-    0 0 5px rgba(0,0,0,.1),
-    0 1px 3px rgba(0,0,0,.3),
-    0 3px 5px rgba(0,0,0,.2),
-    0 5px 10px rgba(0,0,0,.25),
-    0 10px 10px rgba(0,0,0,.2),
-    0 20px 20px rgba(0,0,0,.15);
-     
-}
-
-.home-link{
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9,
+      0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1),
+      0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2),
+      0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2),
+      0 20px 20px rgba(0, 0, 0, 0.15);
+  }
+  
+  .home-link {
     grid-area: 3 / 2 / 4 / 3;
     align-self: first baseline;
-    justify-self: end; 
+    justify-self: end;
     color: white;
     background-color: rgba(255, 0, 0, 0.753);
     height: 50px;
@@ -111,44 +96,38 @@ transition: 1s ease;
     padding: 13px;
     margin-top: 10px;
     transition: 1s ease;
-    
-     
-    
-}
-.home-link:hover{
-    box-shadow: 0px 0px 20px 0px rgba(235,245,242,0.9);
-    -webkit-box-shadow:0px 0px 20px 0px rgba(235,245,242,0.9);
-    -moz-box-shadow: 0px 0px 20px 0px rgba(235,245,242,0.9);
-}
-
-.home--container--bottom{
+  }
+  .home-link:hover {
+    box-shadow: 0px 0px 20px 0px rgba(235, 245, 242, 0.9);
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(235, 245, 242, 0.9);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(235, 245, 242, 0.9);
+  }
+  
+  .home--container--bottom {
     margin: 0 auto;
     width: 90%;
     display: flex;
-    gap:5px;
+    gap: 5px;
     justify-content: center;
     text-align: left;
     border-top: 3px solid white;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.089);
-    
-    
-}
-
-
-.home--container--bottom--box{
+  }
+  
+  .home--container--bottom--box {
     display: flex;
     align-self: center;
-    padding: 10px 30px 30px
-}
-
-.home--container--bottom--box >img {
+    padding: 10px 30px 30px;
+  }
+  
+  .home--container--bottom--box > img {
     width: 80px;
     height: 80px;
     margin: 20px;
-}
-
-@keyframes fade-in {
+  }
+  
+  @keyframes fade-in {
     0% {
       opacity: 0;
     }
@@ -156,87 +135,75 @@ transition: 1s ease;
       opacity: 1;
     }
   }
-
-@media screen and (max-width: 1600px) {
-
+  
+  @media screen and (max-width: 1600px) {
     .home--container--top--left {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        align-items: center;
-        justify-content: center;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      align-items: center;
+      justify-content: center;
     }
-
+  
     .p {
-
-        font-size: 1.8em;
-        letter-spacing: .1em;
-        font-weight: 600;
-        line-height: 1em;
-        align-self: center;
-        justify-self: last baseline;
-
+      font-size: 1.8em;
+      letter-spacing: 0.1em;
+      font-weight: 600;
+      line-height: 1em;
+      align-self: center;
+      justify-self: last baseline;
     }
-
+  
     .p > img {
-        
-        margin: 17px 10px 0px 0px;
-    
+      margin: 17px 10px 0px 0px;
     }
-
-    .home--container--bottom{      
-        flex-direction: column;
-        gap: 20px;
-        padding: 20px;
+  
+    .home--container--bottom {
+      flex-direction: column;
+      gap: 20px;
+      padding: 20px;
     }
-    
-    .home--container--bottom > hr{   
-        display: none;
+  
+    .home--container--bottom > hr {
+      display: none;
     }
-
-    .willkommen--span {   
-        font-size: 1.8rem;
-      
+  
+    .willkommen--span {
+      font-size: 1.8rem;
     }
     .name--span {
-        font-size: 2.5rem;      
-    } 
-    .home-link{
-        height: 42px;
-        width: 120px;
-        border-radius: 30px;
-        font-size: 1em;  
+      font-size: 2.5rem;
     }
-}
-
-@media screen and (max-width: 822px) {
-
+    .home-link {
+      height: 42px;
+      width: 120px;
+      border-radius: 30px;
+      font-size: 1em;
+    }
+  }
+  
+  @media screen and (max-width: 822px) {
     .home--container--top {
-        display: flex;
-        flex-direction: column;
-        gap: 50px 0;
-        
+      display: flex;
+      flex-direction: column;
+      gap: 50px 0;
     }
-    .home--container--top > img{       
-        width: 74vw;
-     }
-    
-     .home--container--bottom{ 
-        margin: 0 auto;     
-        width: 75vw;
+    .home--container--top > img {
+      width: 74vw;
     }
-
-    .home--container--bottom--box >img {
-        width: 70px;
-        height: 70px;
-        margin: 10px;
+  
+    .home--container--bottom {
+      margin: 0 auto;
+      width: 75vw;
     }
-    .home--container--bottom--box{
-        padding: 10px 0 30px;
+  
+    .home--container--bottom--box > img {
+      width: 70px;
+      height: 70px;
+      margin: 10px;
     }
-    
-    
-}
-
-
-   
+    .home--container--bottom--box {
+      padding: 10px 0 30px;
+    }
+  }
+  
