--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@
   --blau: #005ea8;
   --blau2: rgba(3, 42, 94, 0.884);
   --rot: #e40707;
-  --textColor: #504c4a;
+  --textColor: #2c2c2c;
   --mainFont: "Roboto", sans-serif;
 }
 
