--- a/src/styles/impressum.css
+++ b/src/styles/impressum.css
@@ -8,6 +8,10 @@
     text-justify: inter-word;
 }
 
+.impressum h1{
+    border-bottom: .5px solid rgba(105, 105, 105, 0.603);
+}
+
 .impressum a{
     color: var(--blau);
     text-decoration: underline;   
