--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -39,6 +39,35 @@ nav > a:hover {
 .menu-p {
   display: none;
 }
+
+details {
+  cursor: pointer;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.infos--dropdown {
+  background-color: var(--blau2);
+  opacity: 99%;
+  position: absolute;
+  text-align: left;
+  z-index: 999;
+  margin-top: 30px;
+  box-shadow: 1px 1px 5px black;
+  animation: expand-fade-in 0.7s ease-in;
+  
+}
+
+.infos--dropdown p {
+  margin: 10px auto;
+  color:white;
+  padding: 20px;
+}
+.infos--dropdown p:hover {
+  background-color: rgba(255, 255, 255, 0.13);
+}
+
 @media screen and (max-width: 1600px) {
   header {
     height: 180px;
@@ -144,14 +173,7 @@ nav > a:hover {
     text-align: left;
   }
 
-  @keyframes expand-fade-in {
-    from {
-      opacity: 0%;
-    }
-    to {
-      opacity: 100%;
-    }
-  }
+
 
   .closeMenu {
     width: 40px;
@@ -161,5 +183,14 @@ nav > a:hover {
   }
   .closeMenu:hover {
     transform: translate(-2px);
+  }
+}
+
+@keyframes expand-fade-in {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
   }
 }
