--- a/src/styles/informationen.css
+++ b/src/styles/informationen.css
@@ -1,6 +1,6 @@
 .info--container{
   padding: 0;
-  margin: 0 auto;
+  margin: 17px auto 170px;
   height: 100%;
   width: 100vw;
  
@@ -266,7 +266,14 @@ background-color: var(--rot);
 .textContainer ul li{
   padding: 10px 0;
   font-size: 1.2em;
-  font-weight: 600;
+  font-weight: 550;
+}
+
+.textContainer p{
+  font-size: 1.2rem;
+  padding: 0;
+  margin: 0;
+
 }
 
 .theorieunterricht{
