--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -192,13 +192,13 @@
       gap: 50px 0;
     }
     .home--container--top > img {
-      width: 77vw;
+      width: 73vw;
     }
   
     .home--container--bottom {
       margin: 0 auto;
       flex-direction: column;
-      width: 77vw;
+      width: 73vw;
       gap: 20px;
       padding: 20px;
     }
@@ -218,4 +218,11 @@
     }
   }
   
- 
+  @media screen and (max-width: 400px){
+   
+    .home--container--bottom--box > img {
+      width: 50px;
+      height: 50px;
+      
+    }
+  }
