--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -43,3 +43,24 @@ a {
 hr {
   border: 1px dashed rgba(255, 255, 255, 0.644);
 }
+
+@media screen and (max-width: 400px) {
+   
+  h1 {
+         font-size: 1.7rem;
+         margin-bottom: 0;
+       }
+  h2 { 
+         margin-bottom: 0;
+       }
+  h3 {
+         margin-bottom: 0;
+         font-weight: 400;
+  } 
+  
+ 
+   }  
+
+     
+     
+
