--- a/src/styles/kontakt.css
+++ b/src/styles/kontakt.css
@@ -137,12 +137,10 @@
   
   @media screen and (max-width: 600px) {
     .kontakt-container {
-      margin-top: 30px;
+      margin-top: 20px;
     }
   
-    .kontakt-text-content > h1 {
-      font-size: 1.5rem;
-    }
+   
     .form-bottom {
       flex-direction: column;
       gap: 30px;
@@ -159,14 +157,21 @@
   
     .k--filialen {
       flex-direction: column;
-      padding: 0;
-      margin: 0 auto;
+   
     }
   
-    .k--filialen div {
-      width: 100%;
-      margin: 10px auto;
+    .k--filialen > div {
+      border-bottom: 1px dashed rgba(255, 255, 255, 0.644);;
+    }
+
+    .k--filialen img {
+      margin: 0;
       padding: 0;
+      width: 60px;
+    }
+
+    hr {
+      display: none;
     }
   }
   
