--- a/src/styles/über.css
+++ b/src/styles/über.css
@@ -57,9 +57,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-bottom: 40px;
-   
-    
+    margin-bottom: 40px;   
 
 }
 
@@ -160,9 +158,7 @@
     justify-content: center;
     align-items: center;
     padding-left: 50px;
-    flex-direction: column;
-   
-    
+    flex-direction: column; 
 }
 
 .filiale {  
@@ -172,6 +168,10 @@
     gap: 20px;
     width: 80%;
     
+}
+
+.filiale img {
+    width: 77px;
 }
 
 .navi{
@@ -407,4 +407,3 @@
     }
 };
    
-
