--- a/src/styles/kontakt.css
+++ b/src/styles/kontakt.css
@@ -159,15 +159,18 @@
       flex-direction: column;
    
     }
-  
+    .kontakt-text-content h1 {
+      margin: 0 auto 27px;
+    }
     .k--filialen > div {
+      padding: 7px 0;
       border-bottom: 1px dashed rgba(255, 255, 255, 0.644);;
     }
 
     .k--filialen img {
       margin: 0;
       padding: 0;
-      width: 60px;
+      width: 57px;
     }
 
     hr {
