--- a/src/styles/über.css
+++ b/src/styles/über.css
@@ -170,14 +170,10 @@
     
 }
 
-.filiale img {
-    width: 77px;
-}
+
 
 .navi{
-    max-width:100px;
-    width: 100%;
-    height: auto;
+    width: 77px;
     animation: rotate 6s ease-in-out 1 both;   
     margin-right: 10px;
     
@@ -353,12 +349,11 @@
     }
      .filialen {
        flex-direction: row;
-       justify-content: center;
+       justify-content: space-evenly;
        align-items: center;
-       gap: 50px;
+       gap: 20px;
      }
-
-
+  
 
     .über--mittle--left{
         display: none;
@@ -383,18 +378,20 @@
 
 
 @media screen and (max-width: 700px) {
+
     .filialen {
         padding:0 15px 20px;
         flex-direction: column;
         gap: 0;
       }
-      .über--top--row > h2{
+    .über--top--row > h2{
         font-size: 1.2em;
         letter-spacing: .2em;   
     }
      
     .filiale {
         width: 100%;
+       
     }
     .über--top--row > img {
         width: 50px;
@@ -407,3 +404,14 @@
     }
 };
    
+@media screen and (max-width: 400px) {
+  
+    
+    .navi{
+        width: 70px;
+        margin: 0;
+        padding: 0;
+        
+    }
+  
+  }
