--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   --blau: #005ea8;
   --blau2: rgba(3, 42, 94, 0.884);
+  --blau3: #2980b9;
   --rot: #e40707;
   --textColor: #2c2c2c;
   --mainFont: "Roboto", sans-serif;
