--- a/src/styles/über.css
+++ b/src/styles/über.css
@@ -255,70 +255,70 @@
     justify-items: space-between;
     gap: 100px;
   
-
 }
 
 .über--bottom > h1 {
-    font-size: 2.2em;
+    font-size: 2rem;
     letter-spacing: .2em;
     text-align: center;
     margin-bottom: 50px;
 }
 
-.über--bottom--lehrer--box {
-    width: 100%;
-    text-align: center;
-    display: flex;  
-    flex-direction: column;
-    justify-items: center;
+.flip-card {
+    background-color: transparent;
+    width: 350px;
+    height: 350px;
+    perspective: 1000px;
+  }
+  
+.flip-card-inner {
     position: relative;
-}
-
-
-.über--bottom--lehrer--box figure {
-    width: 22em;
-    height:22em;  
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-    box-shadow: 1px 1px 5px black;
-}
-
-
-.über--bottom--lehrer--box figure img {
-    width: 22em;
-    height:22em; 
-    object-fit: cover;
-    filter: brightness(60%);
-    transition: .3s ease-in-out;
-   
-}
-
-.über--bottom--lehrer--box figure:hover img{
-    filter: brightness(100%);
-    width: 24em;
-}
-
-.profil-top-left {
-  position: absolute;
-  top: 0;
-  left: 25px;
-  color: white;
-  font-size: 1.3em;
-  text-align: left;
-}
-
-.profil-bottom-left{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+.flip-card-front, .flip-card-back {
     position: absolute;
-    bottom: 30px;
-    left: 30px;
-    display: flex;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+.flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+.flip-card-back {
+    background-color: var(--blau3);
+    color: white;
+    padding: 20px;
+    margin: 0 auto;
+    line-height: 1.7em;
+    transform: rotateY(180deg);
+  }
+
+
+.lehrer-profil{
+    width: 350px;
+    height: 350px;
+    object-fit: cover;
 }
+
 
 .email {
     width: 60px;
     height: 60px;
-    margin-right: 10px;
+    margin: 10px;
 }
 
 .email:hover {
