--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -62,6 +62,26 @@ hr {
  
    }  
 
+
+   @media screen and (max-width: 300px) {
+   
+    html{
+      font-size: .8rem;
+    }
+    
+    html .menuNav{
+      font-size: .9em;
+    }
+
+    .site-logo > img {
+      width: 100%;
+      max-width: 15rem;
+      margin-top: 20%;
+    }
+     }  
+
+  
+  
      
      
 
