--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -131,7 +131,7 @@
   .home--container--bottom--box > img {
     width: 80px;
     height: 80px;
-    margin: 20px;
+    margin: 27px;
   }
   
   @keyframes fade-in {
@@ -206,7 +206,7 @@
     .home--container--bottom--box > img {
       width: 70px;
       height: 70px;
-      margin: 15px 10px 15px 0;
+      margin: 17px 10px 15px 0;
     }
     .home--container--bottom--box {
       padding: 10px 0 30px;
@@ -223,6 +223,7 @@
     .home--container--bottom--box > img {
       width: 50px;
       height: 50px;
+      margin-top: 17px;
       
     }
     .name--span {
