--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -14,7 +14,7 @@ footer {
 	justify-content: center;
 	gap: 20px;
 	align-items: last baseline;
-	border-bottom: 2px ridge white;
+	border-bottom: 1px ridge rgba(128, 128, 128, 0.678);
 	font-size: 1rem;
 	font-weight: 600;
 	color: rgb(114, 114, 114);
@@ -59,6 +59,7 @@ footer {
   }
   
   .go-top {
+	z-index: 1000;
 	width: 30px;
 	position: fixed;
 	right: 7vw;
