--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -22,14 +22,16 @@ html {
   position: relative;
   margin: 0;
   padding: 0;
+  
 }
 
 body {
-  margin: 0 0 80px;
+  margin: 0 0 170px;
   padding: 0;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  min-height: 100vh;
+  height: max-content;
+ 
 }
 
 body::-webkit-scrollbar {
@@ -45,7 +47,7 @@ hr {
   border: 1px dashed rgba(255, 255, 255, 0.644);
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 410px) {
    
   h1 {
          font-size: 1.7rem;
