--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,10 +51,12 @@ hr {
    
   h1 {
          font-size: 1.7rem;
+         word-break: break-all;
          margin-bottom: 0;
        }
   h2 { 
          margin-bottom: 0;
+         
        }
   h3 {
          margin-bottom: 0;
