--- a/src/styles/informationen.css
+++ b/src/styles/informationen.css
@@ -82,7 +82,6 @@
   color: white;
   justify-content: center;
   align-items: center;
-  padding: 0;
   width: 77vw;
 
 }
@@ -95,7 +94,7 @@
   text-align: left;
   align-items: center;
   justify-content:center;
-  padding: 20px auto;
+  padding: 20px;
   height: 250px;
   width: auto;
   box-shadow: 2px 2px 5px black;
@@ -144,6 +143,8 @@
 .klasse--card img{
   max-width:100px;
   width: 100%;
+  margin-right: 20px;
+  padding: 7px;
   height: auto;
 }
 
@@ -232,6 +233,11 @@ background-color: var(--rot);
   height: 37px;
   
 }
+
+.klasse--card img{
+  margin-right: 0 auto;
+}
+
 }
 
 /* sub -pages (Infos) */
