--- a/src/styles/kontakt.css
+++ b/src/styles/kontakt.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    height: 77vh;
+    height: 80vh;
     width: 100%;
     margin: 77px auto;
   }
@@ -14,7 +14,7 @@
     text-align: center;
     width: 60%;
     height: 100%;
-    padding: 3.75rem 4em;
+    padding: 2.7em 4em;
   }
   
   .kontakt-text::before {
@@ -109,7 +109,7 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 600;
     transition: all 0.3s ease-in-out;
   }
