--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -51,6 +51,7 @@
     align-self: last baseline;
     justify-self: end;
     text-decoration: underline .5px;
+    color: rgba(255, 255, 255, 0.849);
   }
   
   .p > img {
@@ -154,6 +155,7 @@
       line-height: 1em;
       align-self: center;
       justify-self: last baseline;
+     
     }
   
     .p > img {
