--- a/src/styles/links.css
+++ b/src/styles/links.css
@@ -5,7 +5,7 @@
   
   .info--imgs {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     justify-content: center;
     align-items: center;
@@ -26,12 +26,16 @@
     font-weight: bold;
     padding: 20px;
   }
+
+  .info--imgs > a > fieldset > img{
+    object-fit: cover;
+  }
   
   .info--imgs fieldset:hover {
     transform: translate(7px);
   }
   
-  @media screen and (max-width: 860px) {
+  @media screen and (max-width: 1500px) {
     .info-container{
       margin:47px auto;
     }
@@ -45,7 +49,7 @@
     }
     
     .info--imgs {
-      grid-template-columns: 1fr;
+      grid-template-columns: repeat(2, 1fr);
     }
     .info--imgs fieldset {
       width: 97%;
@@ -57,3 +61,9 @@
     }
   }
   
+
+  @media screen and (max-width: 1000px) {
+    .info--imgs {
+      grid-template-columns: 1fr;
+    }
+  }
