--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -41,7 +41,24 @@
     grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    align-items: end;
   }
+
+  .t-zeiten{
+    text-align: left;
+    line-height: 1.3em;
+    letter-spacing: 2px;
+    font-size: 1.3em;
+    background-color: var(--blau2);
+    height: fit-content;
+    width: fit-content;
+    padding: 10px 15px;
+    box-shadow: 0px 0px 7px 0px rgba(11, 4, 104, 0.9);
+    -webkit-box-shadow: 0px 0px 7px 0px rgba(11, 4, 104, 0.9);
+  
+  
+  }
+
   
   .p {
     display: flex;
