--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -49,12 +49,15 @@
     line-height: 1.3em;
     letter-spacing: 2px;
     font-size: 1.3em;
+    opacity: 77%;
+    border-radius: 7px;
+    border: 1px solid white;
     background-color: var(--blau2);
     height: fit-content;
     width: fit-content;
     padding: 10px 15px;
-    box-shadow: 0px 0px 7px 0px rgba(11, 4, 104, 0.9);
-    -webkit-box-shadow: 0px 0px 7px 0px rgba(11, 4, 104, 0.9);
+    box-shadow: 0px 0px 2px 0px rgba(11, 4, 104, 0.9);
+    -webkit-box-shadow: 0px 0px 2px 0px rgba(11, 4, 104, 0.9);
   
   
   }
@@ -181,7 +184,7 @@
       margin: 18px 10px 0px 0px;
     }
   
-   
+
   
     .home--container--bottom > hr {
       display: none;
@@ -201,7 +204,7 @@
     }
   }
   
-  @media screen and (max-width: 822px) {
+  @media screen and (max-width: 1100px) {
     .home--container--top {
       display: flex;
       flex-direction: column;
