--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -49,10 +49,10 @@
     line-height: 1.3em;
     letter-spacing: 2px;
     font-size: 1.3em;
-   
+
     border-radius: 7px;
     border: 1px solid white;
-    background-color: rgba(0, 0, 0, 0.089);
+    background-color: var(--blau3);
     height: fit-content;
     width: fit-content;
     padding: 10px 15px;
