--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -49,15 +49,14 @@
     line-height: 1.3em;
     letter-spacing: 2px;
     font-size: 1.3em;
-    background-color: var(--blau2);
-    /* border: 1px solid white; */
+    background-color: var(--blau3);
+    border: 1px solid white;
     padding: 20px 20px;
     border-radius: 5px;
     height: fit-content;
     width: fit-content;
- 
-    box-shadow: 0px 0px 5px 0px var(--blau2);
-    -webkit-box-shadow: 0px 0px 5px 0px var(--blau2);
+    box-shadow: 0px 0px 7px 0px var(--blau2);
+    -webkit-box-shadow: 0px 0px 7px 0px var(--blau2);
   }
 .t-zeiten:hover{
   transform: translateY(-7px);
