--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -44,22 +44,38 @@
     align-items: end;
   }
 
+  .t-zeiten-div{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+}  
+
+.t-zeiten-frage{
+  align-self: self-start;
+  font-size: 1.5em;
+  margin-top: 10px;
+
+}
   .t-zeiten{
-    text-align: left;
+    opacity: 0.9;
+    text-align: center;
     line-height: 1.3em;
     letter-spacing: 2px;
-    font-size: 1.3em;
-    background-color: var(--blau3);
-    border: 1px solid white;
-    padding: 20px 20px;
-    border-radius: 5px;
-    height: fit-content;
-    width: fit-content;
-    box-shadow: 0px 0px 7px 0px var(--blau2);
-    -webkit-box-shadow: 0px 0px 7px 0px var(--blau2);
+    font-size: 1.4em;
+    background-color: var(--blau);
+    border: 5px solid var(--blau);
+    padding: 15px;
+    border-radius: 100%;
+    height: 120px;
+    width: 120px;
+    box-shadow: 0px 0px 20px 0px white;
+    -webkit-box-shadow: 0px 0px 20px 0px white;
   }
 .t-zeiten:hover{
-  transform: translateY(-7px);
+  opacity: 1;
+  box-shadow: 0px 0px 30px 0px white;
+    -webkit-box-shadow: 0px 0px 30px 0px white;
   transition: 1s ease;
 }
   
