--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -54,12 +54,15 @@
 
 .t-zeiten-frage{
   align-self: self-start;
-  font-size: 1.5em;
+  font-size: 2em;
   margin-top: 10px;
+  opacity: 0.8;
+  font-family: 'Caveat', cursive;
+  font-weight: 400 !important;
 
 }
   .t-zeiten{
-    opacity: 0.9;
+    opacity: 0.8;
     text-align: center;
     line-height: 1.3em;
     letter-spacing: 2px;
@@ -73,6 +76,7 @@
     box-shadow: 0px 0px 20px 0px white;
     -webkit-box-shadow: 0px 0px 20px 0px white;
   }
+
 .t-zeiten:hover{
   opacity: 1;
   box-shadow: 0px 0px 30px 0px white;
