--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,24 +44,36 @@ a {
   color: unset;
 }
 
+ul {
+  margin:0;
+}
+
 hr {
   border: 1px dashed rgba(255, 255, 255, 0.644);
 }
 
-@media screen and (max-width: 410px) {
+@media screen and (max-width: 420px) {
    
   h1 {
-         font-size: 1.7rem;
-         margin-bottom: 0;
-       }
+         font-size: 1.6rem;
+         margin-bottom: 7px;
+         text-align: left;
+  } 
+       
   h2 { 
          margin-bottom: 0;
+         text-align: left;
+  } 
          
-       }
+       
   h3 {
          margin-bottom: 0;
-         font-weight: 400;
+         text-align: left;
   } 
+
+  h4 {
+    text-align: left;
+} 
 
  
    }  
