--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -64,23 +64,20 @@
   .t-zeiten{
     opacity: 0.8;
     text-align: center;
-    line-height: 1.3em;
     letter-spacing: 2px;
-    font-size: 1.4em;
-    background-color: var(--blau);
-    border: 5px solid var(--blau);
-    padding: 15px;
-    border-radius: 100%;
-    height: 120px;
-    width: 120px;
-    box-shadow: 0px 0px 20px 0px white;
-    -webkit-box-shadow: 0px 0px 20px 0px white;
+    font-size: 1.1rem;
+    background-color: var(--blau2);
+    padding: 14px 20px;
+   box-shadow: 0px 0px 3px 0px var(--blau2);
+    height: fit-content;
+    width: fit-content;
+    border-radius: 7px;
   }
 
 .t-zeiten:hover{
-  opacity: 1;
-  box-shadow: 0px 0px 30px 0px white;
-    -webkit-box-shadow: 0px 0px 30px 0px white;
+  opacity: 0.7;
+  box-shadow: 0px 0px 15px 0px white;
+    -webkit-box-shadow: 0px 0px 15px 0px white;
   transition: 1s ease;
 }
   
