--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -65,7 +65,7 @@
   opacity: 0.8;
   font-family: 'Caveat', cursive;
   font-weight: 400 !important;
-  color: rgb(247, 241, 180)
+  color: rgb(248, 242, 170)
 
 }
   .t-zeiten{
@@ -73,20 +73,15 @@
     text-align: center;
     letter-spacing: 2px;
     font-size: 1.1rem;
-    /* background-color: var(--blau2); */
-    /* padding: 14px 20px; */
-   /* box-shadow: 0px 0px 3px 0px var(--blau2); */
     height: fit-content;
     width: fit-content;
     /* border-radius: 7px; */
   }
 
-/* .t-zeiten:hover{
-  opacity: 0.9;
-  box-shadow: 0px 0px 15px 0px white;
-    -webkit-box-shadow: 0px 0px 15px 0px white;
+.t-zeiten:hover{
+  opacity: 1;
   transition: 1s ease;
-} */
+}
   
   .p {
     display: flex;
@@ -96,7 +91,12 @@
     align-self: last baseline;
     justify-self: end;
     /* text-decoration: underline .5px; */
-    color: rgba(255, 255, 255, 0.849);
+    color: rgba(255, 255, 255, 0.8);
+  }
+
+  .p:hover{
+    color: rgba(255, 255, 255, 1);
+    transition: 1s ease;
   }
   
   .p > img {
