--- a/src/styles/über.css
+++ b/src/styles/über.css
@@ -32,7 +32,7 @@
     max-width: 43em;
     width: 100%;
     height: auto;
-    border: 10px solid var(--blau2);
+    border: 7px solid var(--blau2);
 
 }
 
@@ -215,6 +215,7 @@
     bottom: 0;
     left: 150px;
     animation: move1 2s ease-in-out infinite both;
+    z-index: 2;
 }
 
 #schuleIMG2 {
@@ -222,7 +223,7 @@
     bottom: 100px;
     left: 620px;
     animation: move2 2s ease-in-out infinite both;
-    z-index: 2;
+    z-index: 15;
 }
 
 #schuleIMG3 {
@@ -230,6 +231,7 @@
     bottom: 250px;
     left: 300px;
     animation: move3 2s ease-in-out infinite both;
+    z-index: 5;
 }
 @keyframes move1 {
     0% {transform:  translate(0, 0)}
@@ -353,16 +355,59 @@
   
     .über--mittle{
         margin: 0;
+        flex-direction: column;
 
     }
-
+    .über--top--img {
+        max-width: 450px;
+        width: 100%;
+        height: auto;
+        border: 7px solid var(--blau2);
+    
+    }
     .über--mittle--right {
         width: 100%; 
-        flex-wrap: wrap;
+        flex-wrap: wrap-reverse;
         gap: 30px;
+        
+    }
+
+    .über--mittle--left {
+        width: 90%;
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        margin-bottom: 30px;
+      
+    }
+    .schuleIMGs{
+        max-width: 450px;
+        width: 97%;
+        height: auto;
+        border: 7px solid var(--blau2);
+        transition: .7s ease; 
+        margin: 20px;
         
     
     }
+  
+    #schuleIMG1 {
+       
+        position: static;
+        animation: none;
+        
+    }
+    
+    #schuleIMG2 {
+        position: static;
+        animation: none;
+    }
+    
+    #schuleIMG3 {
+        position: static;
+        animation: none;
+    }
+    
      .filialen {
        flex-direction: row;
        justify-content: space-evenly;
@@ -371,9 +416,7 @@
      }
   
 
-    .über--mittle--left{
-        display: none;
-    }
+   
     
     .über--bottom--lehrer {
         
