--- a/src/styles/über.css
+++ b/src/styles/über.css
@@ -258,12 +258,13 @@
 }
 
 .über--bottom--lehrer {
+    display: flex;
     width: 100%;
     text-align: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: space-between;
-    gap: 10vw;
+    align-items: center;
+    justify-content: space-evenly;   
+    flex-wrap: wrap;
+    gap: 30px;
   
 }
 
@@ -345,24 +346,18 @@
 }
 
 @media screen and (max-width: 1600px) {
-    .über--top { 
-       height: fit-content;
-       flex-direction: column;
-       margin-bottom: 0;   
-        
-    }
+ 
 
   
     .über--mittle{
         margin: 0;
         flex-direction: column;
+        
 
     }
-    .über--top--img {
-        max-width: 450px;
+    .über--top--img { 
         width: 100%;
         height: auto;
-        border: 7px solid var(--blau2);
     
     }
     .über--mittle--right {
@@ -383,29 +378,20 @@
     .schuleIMGs{
         max-width: 450px;
         width: 97%;
-        height: auto;
+        height: fit-content;
         border: 7px solid var(--blau2);
         transition: .7s ease; 
-        margin: 20px;
+        margin-top: -50px;
         
     
     }
   
-    #schuleIMG1 {
-       
-        position: static;
-        animation: none;
-        
+    #schuleIMG1, #schuleIMG2, #schuleIMG3 {    
+        position: static;  
     }
+    #schuleIMG3{
+        z-index: 0;
     
-    #schuleIMG2 {
-        position: static;
-        animation: none;
-    }
-    
-    #schuleIMG3 {
-        position: static;
-        animation: none;
     }
     
      .filialen {
@@ -414,23 +400,19 @@
        align-items: center;
        gap: 20px;
      }
-  
-
-   
-    
-    .über--bottom--lehrer {
-        
-        grid-template-columns: 1fr 1fr;
-      
-    
-    }
 
 }
 
 @media screen and (max-width: 1000px) {
-   
-    .über--bottom--lehrer {   
-        grid-template-columns: 1fr; 
+    .über--top { 
+        height: fit-content;
+        flex-direction: column;
+        margin-bottom: 0;   
+         
+     }
+     .schuleIMGs{
+        margin: 20px;
+        
     }
 
 }
